--- a/h1.md
+++ b/h1.md
@@ -35,3 +35,13 @@ säilyy kuitenkin aina omistaja/omistajia niin kauan kuin tekijänoikeudet ovat 
 - Lisenssejä voidaan luokitella esimerkiksi toiminnallisuuden ja historiallisen alkuperän mukaan
 - Oma pohdinta: Avoimen lähdekoodin lisenssejä vaikuttaa olevan kymmeniä erilaisia. Erot lisenssien välillä liittyvät ainakin siihen, miten ohjelmistokoodia saa muunnella ja yhdistää
 siinä tapauksessa, kun näin syntynyttä koodia levitetään.
+
+
+### a) Linuxin asentaminen koneelle
+
+Aloitin ottamalla varmuuskopiot kaikista tiedostoistani.
+
+Osioin levytilaa Ubuntulle, 50 GB. Kiintolevyn kokonaiskoko on 426 GB. Osiointi (partitiointi) tarkoittaa, että levy jaetaan kahteen tai useampaan osaan, jolloin ne näkyvät käyttöjärjestelmille eri levyinä. 
+
+Latasin ohjelman Rufus USB-flashmuistin tyhjennystä varten. Latasin .iso -tiedoston, jonka "poltin" USB-flashmuistiin Rufus-ohjelman avulla.
+
