--- a/h1.md
+++ b/h1.md
@@ -41,7 +41,11 @@ siinä tapauksessa, kun näin syntynyttä koodia levitetään.
 
 Aloitin ottamalla varmuuskopiot kaikista tiedostoistani.
 
-Osioin levytilaa Ubuntulle, 50 GB. Kiintolevyn kokonaiskoko on 426 GB. Osiointi (partitiointi) tarkoittaa, että levy jaetaan kahteen tai useampaan osaan, jolloin ne näkyvät käyttöjärjestelmille eri levyinä. 
+Osioin levytilaa Ubuntulle, 50 GB. Kiintolevyn kokonaiskoko on 426 GB. Osiointi (partitiointi) tarkoittaa, että levy jaetaan kahteen tai useampaan osaan, jolloin ne näkyvät käyttöjärjestelmille eri levyinä. Latasin ohjelmat Rufus sekä MiniTool Partition USB-flashmuistin tyhjennystä ja live-tikun tekoa varten. Latasin .iso -tiedoston (debian-live-11.2.0-amd64-xfce+nonfree.iso).
 
-Latasin ohjelman Rufus USB-flashmuistin tyhjennystä varten. Latasin .iso -tiedoston, jonka "poltin" USB-flashmuistiin Rufus-ohjelman avulla.
+Osioin levyn MiniTool Partition -ohjelman avulla. Suoritin ohjelman, ja sain näkymän kiintolevystä ja jo olemassa olevista osioista. Klikkasin C-aseman kuvaketta hiiren oikealla ja valitsin format. Valitsin uuden osioinnin koon ja sijainnin. Klikkasin luomani 50 GB kokoisen osion aktiiviseksi päänäkymässä ja valitsin Resize partition. Osiointi onnistui.
+
+Käynnistin Rufus-ohjelman. "Poltin" .iso -tiedoston (debian-live-11.2.0-amd64-xfce+nonfree.iso) USB-flashmuistiin Rufus-ohjelman avulla. Valintaikkunassa valitsin seuraavat kuvassa näkyvät asetukset:
+
+Painoin start, ja lataus tikulle alkoi. Latauksen jälkeen asensin Ubuntun tikulta koneelleni. 
 
