--- a/h1.md
+++ b/h1.md
@@ -45,7 +45,42 @@ Osioin levytilaa Ubuntulle, 50 GB. Kiintolevyn kokonaiskoko on 426 GB. Osiointi 
 
 Osioin levyn MiniTool Partition -ohjelman avulla. Suoritin ohjelman, ja sain näkymän kiintolevystä ja jo olemassa olevista osioista. Klikkasin C-aseman kuvaketta hiiren oikealla ja valitsin format. Valitsin uuden osioinnin koon ja sijainnin. Klikkasin luomani 50 GB kokoisen osion aktiiviseksi päänäkymässä ja valitsin Resize partition. Osiointi onnistui.
 
-Käynnistin Rufus-ohjelman. "Poltin" .iso -tiedoston (debian-live-11.2.0-amd64-xfce+nonfree.iso) USB-flashmuistiin Rufus-ohjelman avulla. Valintaikkunassa valitsin seuraavat kuvassa näkyvät asetukset:
+Käynnistin Rufus-ohjelman. "Kirjoitin" .iso -tiedoston (debian-live-11.2.0-amd64-xfce+nonfree.iso) USB-flashmuistiin Rufus-ohjelman avulla. Valintaikkunassa valitsin seuraavat kuvassa näkyvät asetukset:
 
-Painoin start, ja lataus tikulle alkoi. Latauksen jälkeen asensin Ubuntun tikulta koneelleni. 
+Painoin start, ja lataus tikulle alkoi. Latauksen jälkeen asensin Ubuntun tikulta koneelleni. Käynnistin tietokoneen uudelleen. En muistanut oikeaa näppäintä, joten koneen käynnistyessä painelin sarjana F9, F10 ja F12. Pääsin asennusohjelmaan, jossa valitsin ohjatun asennuksen ja tarkistin, että valittuna oli haluamani osio. Asennusohjelma toimi hyvin: valitsin mm. näppäimistön kielen ja asetin pääkäyttäjän salasanan sekä peruskäyttäjän salasanan. 
 
+#### b) Koneen raudan listaus
+Käynnistin Debianin komentotulkin. Asensin lshw packagen:
+
+    $ sudo apt-get install lshw
+
+Tämän jälkeen syötin komennon koneen raudan listaamiseksi:
+
+    $ sudo lshw -short -sanitize
+
+Pyydettiin käyttäjän salasanaa 'password for user: '. Kirjoitin pääkäyttäjälle asettamani salasanan, mutta sain virheilmoituksen, että salasana olisi väärin. Yritin muutaman  kerran, mutta ei toiminut. Epäilin, että muistin salasanan väärin, ja vaihdoin sen. Löysin ohjeen eräästä blogista "How to reset forgotten Debian Linux password". Käynnistin tietokoneen uudelleen ja GRUB -valikossa painoin näppäintä e ennen kuin järjestelmä lähti käynnistymään. Näytölle ilmestyi tekstiä, josta bongasin UUID-tunnisteen. Kirjoitin sen perään init=/bin/bash ja painoin CTRL+x. Seuraavaksi annoin komennon
+
+    :/# mount -n -o remount,rw /
+    
+ja asetin uuden salasanan. Sain ilmoituksen, että salasana on vaihdettu onnistuneesti, ja painoin ctrl-alt-del uudelleen käynnistystä varten.
+
+Komentotulkissa yritin nyt uudelleen listata koneen raudan, mutta jälleen salasana oli muka väärin. Hoksasin, että pyydettiinkin peruskäyttäjän salasanaa eikä pääkäyttäjän. Peruskäyttäjän salasanan syöttämisen jälkeen sain virheilmoituksen 'sonja is not in the sudoers file'. Aloin epäillä, ettei käyttäjäni ollut jostain syystä päässyt sudo-ryhmään. Yritin lisätä käyttäjäni käsin sudo-ryhmään komennoilla:
+
+```
+$ su root
+hashpassword
+root@XXXXXX-XXXXXX:/xxxx/sonja# apt-get install sudo
+root@XXXXXX-XXXXXX:/xxxx/sonja# sudo usermod -aG sudo sonja
+exit
+```
+
+Tämäkään ei auttanut. Seuraavaksi yritin muokata manuaalisesti sudoerien tekstitiedostoa komennolla
+
+    root@XXXXXX-XXXXXX:/xxxx/sonja# sudo nano /etc/sudoers
+
+Lisäsin käyttäjäni listaan. Kirjoitusasun kanssa otin mallia, miten root oli siihen kirjoitettu eli 'sonja   ALL=(ALL:ALL) ALL'. Tätä kautta käyttäjän lisääminen ryhmään onnistui viimein. Salasana toimi nyt, ja sain listattua koneen raudan.
+
+Listauksessa oli tietoja järjestelmän eri laitteistokomponenteista. Tietoja oli mm. muistikokoonpanosta, emolevyn kokoonpanosta, ohjelmistoversiosta, suorittimen versiosta ja nopeudesta sekä väylän nopeudesta.
+
+
+#### c) Uusien ohjelmien asentaminen
