--- a/h1.md
+++ b/h1.md
@@ -2,6 +2,7 @@
 
 ### z) Tiivistelmät artikkeleista
 
+20.1.2022
 FSF: FSF Free Software Definition. What is Free Software? https://www.gnu.org/philosophy/free-sw.html
 - Vapaa ohjelmisto (free software) viittaa ohjelmistoon, jonka käyttäjillä on vapaus käyttää, kopioida, jakaa, muuttaa tai parantaa ohjelmistoa
 - Se voidaan määritellä neljän perustekijän kautta: vapaus ajaa ohjelmaa haluamallaan tavalla mihin tahansa tarkoitukseen, vapaus tutkia ohjelman toimintaa ja muuttaa sitä niin, että se 
@@ -39,8 +40,10 @@ siinä tapauksessa, kun näin syntynyttä koodia levitetään.
 
 ### a) Linuxin asentaminen koneelle
 
+21.1.2022
 Aloitin ottamalla varmuuskopiot kaikista tiedostoistani.
 
+22.1.2022
 Osioin levytilaa Ubuntulle, 50 GB. Kiintolevyn kokonaiskoko on 426 GB. Osiointi (partitiointi) tarkoittaa, että levy jaetaan kahteen tai useampaan osaan, jolloin ne näkyvät käyttöjärjestelmille eri levyinä. Latasin ohjelmat Rufus sekä MiniTool Partition USB-flashmuistin tyhjennystä ja live-tikun tekoa varten. Latasin .iso -tiedoston (debian-live-11.2.0-amd64-xfce+nonfree.iso).
 
 Osioin levyn MiniTool Partition -ohjelman avulla. Suoritin ohjelman, ja sain näkymän kiintolevystä ja jo olemassa olevista osioista. Klikkasin C-aseman kuvaketta hiiren oikealla ja valitsin format. Valitsin uuden osioinnin koon ja sijainnin. Klikkasin luomani 50 GB kokoisen osion aktiiviseksi päänäkymässä ja valitsin Resize partition. Osiointi onnistui.
@@ -49,7 +52,9 @@ Käynnistin Rufus-ohjelman. "Kirjoitin" .iso -tiedoston (debian-live-11.2.0-amd6
 
 Painoin start, ja lataus tikulle alkoi. Latauksen jälkeen asensin Ubuntun tikulta koneelleni. Käynnistin tietokoneen uudelleen. En muistanut oikeaa näppäintä, joten koneen käynnistyessä painelin sarjana F9, F10 ja F12. Pääsin asennusohjelmaan, jossa valitsin ohjatun asennuksen ja tarkistin, että valittuna oli haluamani osio. Asennusohjelma toimi hyvin: valitsin mm. näppäimistön kielen ja asetin pääkäyttäjän salasanan sekä peruskäyttäjän salasanan. 
 
-#### b) Koneen raudan listaus
+### b) Koneen raudan listaus
+
+24.1.2022
 Käynnistin Debianin komentotulkin. Asensin lshw packagen:
 
     $ sudo apt-get install lshw
@@ -84,3 +89,54 @@ Listauksessa oli tietoja järjestelmän eri laitteistokomponenteista. Tietoja ol
 
 
 #### c) Uusien ohjelmien asentaminen
+25.1.2022
+Mietin, mitä ohjelmia haluaisin asentaa. Halusin ainakin simppelin markdown-ohjelman. Puntaroin ReTextin ja GhostWriterin välillä ja päädyin ensimmäiseen, kun siitä oli enemmän tyytyväisyyttä. Yritin asentaa ohjelman komennolla
+
+    $ sudo apt install retext
+
+Sain virheilmoituksen 'command not found'. Duckduckasin virheilmoituksen ja Stackoverflowsta sain vihjeen, että on paljon ohjeita, mitä kaikkea tulisi tehdä Debian 11 asennuksen jälkeen. LinuxTechi-sivustolta luin artikkelin Top 12 Things To Do After Installing Debian 11. Siinä kehotettiin mm. asentamaan kaikki päivitykset Debian 11:een. Syötin komennot:
+
+```
+$ sudo apt update
+$ sudo apt upgrade -y
+```
+Onnistumisilmoituksen jälkeen uudelleenkäynnistin koneen
+
+    $ sudo reboot
+    
+Tämän jälkeen kokeilin uudelleen asentaa retext-ohjelman komentotulkista, ja se onnistui hyvin. Käynnistin ohjelman komentotulkista onnistuneesti:
+
+    $ retext
+
+Samalla periaatteella asensin ohjelmat GIMP ja Shotcut.
+
+### d) Ohjelmien lisenssit
+
+25.1.2022
+Kuvankäsittelyohjelma GIMP käyttää lisenssiä General Public License v3 tai uudempaa versiota tästä. Tämä tarkoittaa, että GIMP-ohjelmaa saa käyttää vapaasti mihin tahansa tarkoitukseen, ja sitä voi jakaa vapaasti. Samoin Shotcut ja Retext käyttävät lisenssiä GPLv3. 
+
+### f) Tiedostojen varmuuskopiointi
+21.1.2022
+Varmuuskopioin tiedotoni ulkoiselle kovalevylle.
+
+### Lähteet
+
+How to Reset the Root Password in Linux. 2021.
+https://www.maketecheasier.com/reset-root-password-linux/
+
+LinuxTechi. 2021. Top 12 Things To Do After Installing Debian 11
+https://www.linuxtechi.com/things-to-do-after-installing-debian-11/
+
+Retext. n.d.
+https://texteditors.org/cgi-bin/wiki.pl?ReText
+
+Shotcut. FAQ. Is Shotcut free for commercial use?
+https://shotcut.org/FAQ/
+
+Two Ways to add users to sudoers group in Debian 11
+https://www.how2shout.com/linux/2-ways-to-add-users-to-sudoers-group-in-debian-11/
+
+What’s the GIMP’s license, and how do I comply with it?
+https://www.gimp.org/docs/userfaq.html#whats-the-gimps-license-and-how-do-i-comply-with-it
+
+
