--- a/h2.md
+++ b/h2.md
@@ -12,6 +12,8 @@ Hub on laajennus komentorivi gitiin. Se auttaa tekemään jokapäiväisiä GitHu
 
 Toinen artikkeli oli Command Line Basics Revisited, jossa käytiin läpi komentorivin perusteita. Artikkelissa on esitelty keskeisiä komentoja liittyen esimerkiksi liikkumiseen kansiorakenteissa, kansioiden ja tiedostojen muokkaamiseen sekä kyselyiden tekemiseen.
 
+Esimerkiksi työhakemiston kansiot voi tulostaa komennolla ls. Komennolla cd liikutaan hakemistojen välillä, cd .. yksi taaksepäin. 
+
 #### a) FHS
 
 29.1.2022
@@ -20,11 +22,11 @@ Hoffman, C. 2016. The Linux directory structure, explained. Luettavissa: https:/
 
 Karvinen, T. 2020. Command Line Basics Revisited. Important directories. Luettavissa: https://terokarvinen.com/2020/command-line-basics-revisited/
 
-/  viittaa päähekemistoon, tiedostojärjestelmän juureen. Vertaa Windowsin C:
+/  viittaa päähekemistoon, tiedostojärjestelmän juureen. Vertaa Windowsin C:   
 
-/home/  sisältää kaikkien käyttäjien kotihakemistot
+/home/  Sisältää kaikkien käyttäjien kotihakemistot. 
 
-/home/sonja/   Kotihakemistosta on haettu käyttäjän sonja kotihakemisto. Ainoastaan täällä käyttäjä (tässä tapauksessa sonja) voi tallettaa tietoja pysyvästi.
+/home/sonja/   Kotihakemistosta on haettu käyttäjän sonja kotihakemisto. Ainoastaan täällä käyttäjä (tässä tapauksessa sonja) voi tallettaa tietoja pysyvästi. Linux on monen käyttäjän ympäristö, joten jokaiselle käyttäjälle on myös määritetty erityinen hakemisto, joka on ainoastaan tämän ja sudon käytettävissä.
 
 /etc/   Kaikki järjestelmäasetukset tekstitiedosto-muodossa. 
 
@@ -50,6 +52,23 @@ Tämän jälkeen etsin hakusanalla tietoa Wikipediasta komentokehotteella. Hakus
         $ wikit summer
 
 ![](images/h2/wikit_summer.png)
+
+Asensin myös ohjelman htop, jonka avulla 
+
+        $ sudo apt install htop
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
 
 #### c) Log
 Tässä tehtävässä on tarkoituksena aiheuttaa lokiin onnistunut ja epäonnistunut tapahtuma, ja analysoida lokitukset.
@@ -87,7 +106,6 @@ Feb  1 12:09:37 DESKTOP-LMB68OJ kernel: [11622.762013] wlp58s0: RX AssocResp fro
 Feb  1 12:09:37 DESKTOP-LMB68OJ kernel: [11622.765460] wlp58s0: associated
 
 Tiedoista käy ilmi, että wifi-yhteys katkesi äkillisesti, mutta uuden yhteyden luominen onnistui myöhemmin. Kun yhteys katkesi, tuli virhemerkintä disassociated (yhteys on katkennut) ja syyksi ilmoitettiin prev auth not valid (todennus ei onnistu). Kun yhteys muodostettiin uudestaan, todennus onnistui ja yhteys toimi jälleen.
-
 
 
 #### d) Kuvaavia esimerkkejä grep-komennon käytöstä
