--- a/h3.md
+++ b/h3.md
@@ -28,7 +28,7 @@ Jostain syystä aikavyöhyke oli väärä.
 
 Kokeilin mennä vielä osoitteeseen osoitteeseen http://localhost ja päädyin Apachen automaattiselle etusivulle, jossa kerrottiin, että Apache toimii hyvin.
 
-![](images/h3/apacheFrontpage.png)
+![](images/apacheFrontpage.png)
 
 #### b) Laita käyttäjien kotisivut (http://example.com/~tero) toimimaan, ja testaa esimerkkikotisivulla
 
@@ -43,11 +43,11 @@ käyttäjäkohtaisten sivujen käyttöönottamiseksi. Tämän komennon avulla jo
 
 Testasin toimivuutta esimerkkikotisivulla eli menin osoitteeseen http://localhost/~sonja ja siellä näkyi public_html hakemistossa olevat tiedot
 
-![](images/h3/localhostSonja.png)
+![](images/localhostSonja.png)
 
 Sitten testasin http://example.com/~sonja ja sain seuraavanlaisen sivun
 
-![](images/h3/examplecom.png)
+![](images/examplecom.png)
 
 Tämä tehtävän osa jäi epäselväksi, miten tätä olisi tarkoitus muokata...?
 
@@ -64,15 +64,15 @@ Loin hakemistoon /home/sonja/public_html tiedoston index.html komennolla
 
 Kirjoitin tiedostoon yksinkertaisen kotisivun HTML5 validiointi huomioiden.
 
-![](images/h3/htmlFile.png)
+![](images/htmlFile.png)
 
 Testasin sivun toimivuutta menemällä osoitteeseen http://localhost/~sonja ja sivu näytti siltä kuin pitääkin.
 
-![](images/h3/homepageWorks.png)
+![](images/homepageWorks.png)
 
 Testasin, onko koodi validi validator-työkalulla (https://validator.w3.org). Lopputulos oli hyväksytty.
 
-![](images/h3/htmlpageOK.png)
+![](images/htmlpageOK.png)
 
 
         
@@ -109,7 +109,7 @@ Viimeisenä on kerrottu selaimen nimi versiotietoineen sekä tietoja omasta käy
 
 Kokeilin tehdä epäonnistuneen sivulatauksen yrittämällä mennä sivustolle, jota ei ole.
 
-![](images/h3/sivua ei ole.png)
+![](images/sivuaeiole.png)
 
 Sain lokitiedon
 
@@ -132,6 +132,6 @@ Poistin sivustokoodin ja korvasin sen tekstinpätkällä. Painoin CTRL + X poist
                 
 Muutokset onnistuivat.
 
-![](images/h3/editCode.png)
+![](images/editCode.png)
 
 
