--- a/4h.md
+++ b/4h.md
@@ -120,4 +120,14 @@ Päivitin palvelimeni kaikki ohjelmat komennoilla
 
 #### g) Rosvot porteilla. Etsi lokeistasi merkkejä murtautumisyrityksistä ja analysoi ne.
 
+Yritin etsiä lokitietoja komennolla
+
+        $ sudo
+
+mutta sain vain viime viikkoisia lokitietoja. Yksi oli tältä viikolta. Olin käyttäjänä sonja, en uutena tekemänäni käyttäjänä. Yritin vaihtaa käyttäjää komennolla
+
+        $ su käyttäjänimitähän
+
+mutta sain virheilmoituksen, että käyttäjää ei löytyisi. Se ei oikein voisi pitää paikkaansa, koska loin uuden käyttäjän onnistuneesti, ja tein sillä komentoja onnistuneesti aikaisemmin...
+
 
