--- a/4h.md
+++ b/4h.md
@@ -2,8 +2,16 @@
 
 Karvinen, T. 2022. Linux Palvelimet 2022. Luettavissa: https://terokarvinen.com/2021/linux-palvelimet-ict4tn021-3018/
 
-#### Z) Tiivistelmät artikkeleista
+#### z) Tiivistelmät artikkeleista
 
+
+Karvinen. T. 2017. First Steps on a New Virtual Private Server – an Example on DigitalOcean and Ubuntu 16.04 LTS. Luettavissa: https://terokarvinen.com/2017/first-steps-on-a-new-virtual-private-server-an-example-on-digitalocean/?fromSearch=first%20steps
+
+Artikkeli, jossa ohjeistetaan julkisen pilven vuokraamiseen. Opiskelijan kannattaa ottaa GitHub Education -paketti, jonka kautta saa hyviä tarjouksia esimerkiksi DigitalOceaniin. Ensiarvoisen tärkeää on luoda aina hyviä salasanoja. Kun serveri on asennettu, on laitettava palomuuri. Tehdään reikä ssh-palvelimelle. Artikkelin lopussa käsiteltiin nimipalvelinta, esimerkkinä Namecheap, josta voi vuokrata nimen palvelimelle.
+    
+Karvinen, T. 2018. Name Based Virtual Hosts on Apache – Multiple Websites to Single IP Address. Luettavissa: https://terokarvinen.com/2018/name-based-virtual-hosts-on-apache-multiple-websites-to-single-ip-address/?fromSearch=name%20based%20virtual
+
+Artikkelissa käsitellään, miten Apachelle asennetaan virtuaalihost. Samalle palvelimelle pystyy asettamaan monta eri domainnimeä. 
 
 
 #### a) Pilvi. Vuokraa ja asenna oma julkinen palvelin Internetiin. Vuokraa nimi osoittamaan siihen.
