--- a/4h.md
+++ b/4h.md
@@ -3,7 +3,7 @@
 Karvinen, T. 2022. Linux Palvelimet 2022. Luettavissa: https://terokarvinen.com/2021/linux-palvelimet-ict4tn021-3018/
 
 #### z) Tiivistelmät artikkeleista
-
+10.2.2022
 
 Karvinen. T. 2017. First Steps on a New Virtual Private Server – an Example on DigitalOcean and Ubuntu 16.04 LTS. Luettavissa: https://terokarvinen.com/2017/first-steps-on-a-new-virtual-private-server-an-example-on-digitalocean/?fromSearch=first%20steps
 
@@ -15,6 +15,7 @@ Artikkelissa käsitellään, miten Apachelle asennetaan virtuaalihost. Samalle p
 
 
 #### a) Pilvi. Vuokraa ja asenna oma julkinen palvelin Internetiin. Vuokraa nimi osoittamaan siihen.
+11.2.2022
 
 Vuokrasin julkisen pilven yritykseltä DigitalOcean. Kirjauduin sivustolle GitHubEducation-paketin tarjouspaketin kautta, jolloin sain 100 credittiä (euroa) käyttööni. Näin ei tarvitse käyttää omaa rahaa palvelun ylläpitoon. 
 
@@ -48,7 +49,8 @@ Vuokrauksen jälkeen menin muokkaamaan asetuksia, jotta sain uuden nimeni osoitt
 
 
 
-#### d) Suuri muuri. Suojaa palvelin tulimuurilla. Muista ensin reikä ssh-palvelimelle.
+#### b) Suuri muuri. Suojaa palvelin tulimuurilla. Muista ensin reikä ssh-palvelimelle.
+12.2.2022
 
 Otin yhteyttä asentamaani serveriin terminaalin kautta komennolla
 
@@ -99,6 +101,7 @@ Sain seuraavanlaisen ilmoituksen. En ole täysin varma, onnistuiko käytöstä p
 
 
 #### e) Served. Laita koneellesi Apache-weppipalvelin. Korvaa testisivu. Laita käyttäjän kotisivut toimimaan. Kokeile eri koneelta, esim. kännykällä, että sivut toimivat. Vinkki: tee kotisivut normaalina käyttäjänä public_html/ alle.
+13.2.2022
 
 Asensin apachen komennolla
 
@@ -113,10 +116,8 @@ Menin sivustolleni osoitteeseen nurmis.me ja sain apachen oletussivun - se siis 
 ![](images/nurmismeOK.png)
 
 
-
-
-
 #### f) Päivitys. Päivitä palvelimesi kaikki ohjelmat.
+13.2.2022
 
 Päivitin palvelimeni kaikki ohjelmat komennoilla
 
@@ -127,6 +128,7 @@ Päivitin palvelimeni kaikki ohjelmat komennoilla
 
 
 #### g) Rosvot porteilla. Etsi lokeistasi merkkejä murtautumisyrityksistä ja analysoi ne.
+14.2.2022
 
 Yritin etsiä lokitietoja komennolla
 
