--- a/4h.md
+++ b/4h.md
@@ -52,6 +52,8 @@ Vuokrauksen jälkeen menin muokkaamaan asetuksia, jotta sain uuden nimeni osoitt
 #### b) Suuri muuri. Suojaa palvelin tulimuurilla. Muista ensin reikä ssh-palvelimelle.
 12.2.2022
 
+https://askubuntu.com/questions/1307736/warning-permanently-added-111-222-33-40-ecdsa-to-the-list-of-known-hosts
+
 Otin yhteyttä asentamaani serveriin terminaalin kautta komennolla
 
     $ ssh käyttäjänimitähän@ip-osoitetähän
@@ -59,6 +61,8 @@ Otin yhteyttä asentamaani serveriin terminaalin kautta komennolla
 ja syötin serverin salasanan.
 
 ![](images/sshOK.png)
+
+Ilmoitus liittyen ecdsa key fingerprintiin huolestutti, samoin varoitus "permanently added to list of known hosts". Etsin tietoa ja löysin AskUbuntu -sivustolta käyttäjän vastauksen, että tämä on normaali informaatioviesti ssh:lta, kun etähost ei ole aiemmin tuttu. Vastausta oli peukutettu, ja opiskelijakaverini antoi myös mielipiteensä, että ei ole vaarallinen juttu.
 
 Seuraavaksi asensin ufw:n 
 
