--- a/H5.md
+++ b/H5.md
@@ -154,9 +154,10 @@ Käynnistin taas serverin ja katsoin, olivat muutokset tulleet voimaan. Kaikki o
 
 #### b) Prod. Make a production style Django install. Use Apache and mod_wsgi, disable DEBUG.
 
+Tarkoituksena olisi siis saada tekemäni Todolist-soellukseni omalle palvelimelleni. Aloitin ottamalla yhteyden palvelimeeni:
 
-
-![](images/oceanImage.png)
+        $ ssh käyttäjänimitähän@ip-osoitetähän
+        
 
 
 
